Changed the paths

--- a/public/assignment/views/user/templates/profile.view.client.html
+++ b/public/assignment/views/user/templates/profile.view.client.html
@@ -67,5 +67,5 @@
            href="#!/login"
            role="button">Logout</a>
     </div>
-    <div ng-include="'common/footer.view.client.html'"></div>
+    <div ng-include="'views/common/footer.view.client.html'"></div>
 </div>
