--- a/public/assignment/views/website/templates/website-new.view.client.html
+++ b/public/assignment/views/website/templates/website-new.view.client.html
@@ -49,4 +49,4 @@
         </div>
     </div>
 </div>
-<div ng-include="'common/footer.view.client.html'"></div>
+<div ng-include="'views/common/footer.view.client.html'"></div>
