--- a/public/assignment/views/widget/editors/widget-edit.view.client.html
+++ b/public/assignment/views/widget/editors/widget-edit.view.client.html
@@ -19,4 +19,4 @@
     </div>
 </nav>
 <div ng-include="model.getEditPath(model.widget)"></div>
-<div ng-include="'common/footer.view.client.html'"></div>
+<div ng-include="'views/common/footer.view.client.html'"></div>
