--- a/public/assignment/views/widget/templates/widget-chooser.view.client.html
+++ b/public/assignment/views/widget/templates/widget-chooser.view.client.html
@@ -19,4 +19,4 @@
        href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget"
        role="button">Cancel</a>
 </div>
-<div ng-include="'common/footer.view.client.html'"></div>
+<div ng-include="'views/common/footer.view.client.html'"></div>
