--- a/public/assignment/views/page/templates/page-list.view.client.html
+++ b/public/assignment/views/page/templates/page-list.view.client.html
@@ -45,4 +45,4 @@
         </li>
     </ul>
 </div>
-<div ng-include="'common/footer.view.client.html'"></div>
+<div ng-include="'views/common/footer.view.client.html'"></div>
