--- a/public/assignment/views/website/templates/website-edit.view.client.html
+++ b/public/assignment/views/website/templates/website-edit.view.client.html
@@ -44,4 +44,4 @@
         </div>
     </div>
 </div>
-<div ng-include="'common/footer.view.client.html'"></div>
+<div ng-include="'views/common/footer.view.client.html'"></div>
