--- a/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -40,4 +40,4 @@
         </div>
     </div>
 </div>
-<div ng-include="'common/footer.view.client.html'"></div>
+<div ng-include="'views/common/footer.view.client.html'"></div>
