partial server side implementation of website service

--- a/public/assignment/css/styles.css
+++ b/public/assignment/css/styles.css
@@ -1,4 +1,4 @@
-input, textarea.form-control, select.form-control {
+input, textarea.form-control, select.form-control, #upload {
     margin-bottom: 5px;
 }
 
