--- a/public/assignment/views/page/templates/page-edit.view.client.html
+++ b/public/assignment/views/page/templates/page-edit.view.client.html
@@ -68,6 +68,10 @@
             <a class="btn btn-default btn-block btn-danger"
                ng-click="model.deletePage(model.page._id)"
                role="button">Delete</a>
+
+            <a class="btn btn-default btn-block btn-danger"
+               href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page"
+               role="button">Cancel</a>
         </div>
     </div>
 
