--- a/public/assignment/views/website/templates/website-edit.view.client.html
+++ b/public/assignment/views/website/templates/website-edit.view.client.html
@@ -20,7 +20,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-xs-3 visible-lg split-view-left">
-            <div ng-include="'website/templates/website-list.component.client.html'"></div>
+            <div ng-include="'views/website/templates/website-list.component.client.html'"></div>
         </div>
         <div class="col-xs-12 col-lg-9 split-view-right">
             <label for="name">Website Name</label>
@@ -41,6 +41,10 @@
             <a class="btn btn-default btn-block btn-danger"
                ng-click="model.deleteWebsite(model.website._id)"
                role="button">Delete</a>
+
+            <a class="btn btn-default btn-block btn-danger"
+               href="#!/user/{{model.userId}}/website"
+               role="button">Cancel</a>
         </div>
     </div>
 </div>
