--- a/public/assignment/views/widget/editors/widget-edit.view.client.html
+++ b/public/assignment/views/widget/editors/widget-edit.view.client.html
@@ -18,5 +18,32 @@
         </div>
     </div>
 </nav>
-<div ng-include="model.getEditPath(model.widget)"></div>
+<div class="row">
+    <div class="col-xs-3 visible-lg split-view-left">
+        <div class="container-fluid">
+            <div ng-repeat="widget in model.widgets" class="wd-widget">
+                <div class="wd-widget-toolbar">
+                    <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{widget._id}}">
+                        <span class="glyphicon glyphicon-cog"></span>
+                    </a>
+                    <span class="glyphicon glyphicon-align-justify"></span>
+                </div>
+                <div ng-include="model.getIncludePath(widget)"></div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-12 col-lg-9 split-view-right">
+        <div class="container-fluid">
+            <div ng-include="model.getEditPath(model.widget)"></div>
+
+            <a class="btn btn-default btn-block btn-danger"
+               ng-click="model.deleteWidget(model.widget._id)"
+               role="button">Delete</a>
+
+            <a class="btn btn-default btn-block btn-danger"
+               href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget"
+               role="button">Cancel</a>
+        </div>
+    </div>
+</div>
 <div ng-include="'views/common/footer.view.client.html'"></div>
