--- a/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div class="col-xs-12 col-lg-9 split-view-right">
-        <div class="container-fluid">
+        <div class="container-fluid" widget-list-sortable>
             <div ng-repeat="widget in model.widgets" class="wd-widget">
                 <div class="wd-widget-toolbar">
                     <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{widget._id}}">
