Flickr Search Implemented

--- a/public/assignment/css/styles.css
+++ b/public/assignment/css/styles.css
@@ -1,4 +1,4 @@
-input, textarea.form-control, select.form-control, #upload, form {
+input, textarea.form-control, select.form-control, #upload, #search {
     margin-bottom: 5px;
 }
 
