--- a/public/assignment/views/widget/editors/widget-image-edit.view.client.html
+++ b/public/assignment/views/widget/editors/widget-image-edit.view.client.html
@@ -34,5 +34,12 @@
     <input  name="websiteId" value="{{model.websiteId}}"   style="display: none"/>
     <input  name="pageId"    value="{{model.pageId}}"   style="display: none"/>
     <input  name="widgetId"  value="{{model.widget._id}}"   style="display: none"/>
-    <button type="submit"    class="btn btn-block btn-primary">Upload Image</button>
+    <button type="submit" id="upload" class="btn btn-block btn-primary">Upload Image</button>
 </form>
+
+<a class="btn btn-default btn-block btn-primary"
+   id = "search"
+   href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{model.widget._id}}/search"
+   role="button">Search</a>
+
+
