Added bootstrap JS file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<link href="/vendor/css/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+<link href="../public/vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
 <br/>
 
 <%
